--- a/COMP3402_T6/.classpath
+++ b/COMP3402_T6/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="/usr/local/Cellar/tomcat@8.0/8.0.42/libexec/lib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
